# discord-presence

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-lib.yml
include/: discord-rpc.hpp
include/discord-rpc/: command-queue.hpp  presence.hpp
src/: backoff.hpp  command-queue.cpp  discord-rpc.cpp  rpc-connection.hpp  serialization.cpp  serialization.hpp
src/platform/: linux.hpp  macos.hpp  platform.hpp  unix.hpp  windows.cpp  windows.hpp  wine_gcc.hpp  wine_masm.asm  wine_x86.hpp
test/: CMakeLists.txt  main.cpp
